# PX4-Swarm-Optitrack

./: README.md
src/px4_zxz/: CMakeLists.txt  package.xml
src/px4_zxz/launch/: UAV1_single.launch  UAV2_single.launch  UAV3_single.launch  UAV4_single.launch  swarm.launch
src/px4_zxz/src/single/: single_offboard.cpp
src/px4_zxz/src/swarm/: swarm_cmd.cpp
