<?xml version="1.0"?>
<package>
  <name>px4_zxz</name>
  <version>0.0.0</version>
  <description>The px4_offboard package</description>

  <maintainer email="jiaozhen@mail.nwpu.edu.cn">Xiaozhen Zhang</maintainer>
  <author email="jiaozhen@mail.nwpu.edu.cn">Xiaozhen Zhang</author>
  <license>GPLv3</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>image_transport</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>



  <run_depend>roscpp</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>image_transport</run_depend>
  <run_depend>tf</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>geometry_msgs</run_depend>



  <export>

  </export>
</package>
